<resources>
    <string name="app_name">Prueba Android</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">No es un correo electrónico válido</string>
    <string name="invalid_password">La contraseña debe contener más de 5 caracteres</string>
    <string name="login_failed">"Error de inicio de sesion"</string>
    <string name="register">Registrarse</string>

    <string name="button_register">Registrar</string>
    <string name="title_activity_register">Registro</string>
    <string name="prompt_username">Nombre de usuario</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_lastname">Apellidos</string>
    <string name="prompt_phone">Celular</string>
    <string name="account">¿Ya tienes una cuenta? haga clic aquí</string>

    <string name="hello">¡Hola Usuario!</string>
    <string name="subtitle">Este es el clima actual</string>
    <string name="logout">Cerrar sesión</string>

</resources>
